Commit al blog con estilo bonito

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aqui vamos a desarrollar un blog</h1>
-    <p>Vamos a hacer un blog de ejemplo para este curso de git</p>
+    <div id = "container">
+        <div id = "post">
+            <h1>Titulo bien hermoso</h1>
+            <p>En este parrafo vamos a explicar un poco 
+                lo que estamos haciendo </p>
+        </div>
+    </div>
+    
 </body>
 </html>
