Introduccion de cabecera

--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id = "container">
+        <div id = "cabecera">
+            Cabecera
+        </div>
         <div id = "post">
             <h1>Titulo bien hermoso</h1>
             <p>En este parrafo vamos a explicar un poco 
