--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <div id = "container">
+        <div id = cabecera>
+            HyperBlog
+            <span id = "tagline">El blog de aprendizaje</span>
+        </div>
         <div id = "post">
             <h1>Titulo bien hermoso</h1>
             <p>En este parrafo vamos a explicar un poco 
