introduccion de los parrafos

--- a/blog.html
+++ b/blog.html
@@ -16,6 +16,18 @@
             <h1>Titulo bien hermoso</h1>
             <p>En este parrafo vamos a explicar un poco 
                 lo que estamos haciendo </p>
+            <p>bfdfsfodsbfosdansanodsiiandu  u diubsadibasondosubdaSNDndoBSDONAD
+                sadnansdoapspdnaosndonspadnapssd
+                adoasndpaasodnosa
+                sdnasbdnpasamdioaspdnsapd
+                sndoJDPAOD
+            </p>
+            <P>SDJBFSNADDSNDNASDS
+                NDPSANIdkasndnoasnd
+                jadoPNPD,FMNOSFNAOD
+                SNDOANDASMDPASDPAS
+                ANSDOANSDPASNDNASPD
+            </P>
         </div>
     </div>
     
