Ponerle caj y mas esilo a el blog

--- a/Archivo.html
+++ b/Archivo.html
@@ -7,8 +7,12 @@
     <title>El blog de git</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
-<body>
-    <h1>Aqui vamos a hacer un blog para git</h1>
-    <p>Este es un parrafo para el curso de git</p>
-</body>
+    <body>
+        <div id = "container">
+            <div id = post>
+                <h1>Aqui vamos a hacer un blog para git</h1>
+                <p>Este es un parrafo para el curso de git</p>
+            </div>
+        </div>
+    </body>
 </html>
