--- a/Archivo.html
+++ b/Archivo.html
@@ -9,7 +9,10 @@
 </head>
     <body>
         <div id = "container">
-            <div id = post>
+            <div id = "cabecera1">
+                Cabecera  
+            </div>
+            <div id = "post">
                 <h1>Aqui vamos a hacer un blog para git</h1>
                 <p>Este es un parrafo para el curso de git</p>
             </div>
