Cambios fuertes a la cabecera1

--- a/Archivo.html
+++ b/Archivo.html
@@ -10,7 +10,8 @@
     <body>
         <div id = "container">
             <div id = "cabecera1">
-                Cabecera  
+                Super blog 
+                <span id = "tagline"> El blog para aprender git</span>
             </div>
             <div id = "post">
                 <h1>Aqui vamos a hacer un blog para git</h1>
