agregado un parrafo para marge

--- a/Archivo.html
+++ b/Archivo.html
@@ -12,6 +12,11 @@
             <div id = post>
                 <h1>Aqui vamos a hacer un blog para git</h1>
                 <p>Este es un parrafo para el curso de git</p>
+                <p>
+                    Este blog esta diseñado para aprender git
+                    haciendo unos ejercicios por ejemplo este parrfo
+                    esta diseñado para hacer un merge junto con la cabezera
+                </p>
             </div>
         </div>
     </body>
