--- a/Archivo.html
+++ b/Archivo.html
@@ -10,6 +10,7 @@
     <body>
         <div id = "container">
             <div id = "cabecera1">
+                <img id="logo" src="imagenes/Logo.png" />
                 Super blog 
                 <span id = "tagline"> El blog para aprender git</span>
             </div>
