--- a/Archivo.html
+++ b/Archivo.html
@@ -22,6 +22,10 @@
                     esta diseñado para hacer un merge junto con la cabezera
                 </p>
             </div>
+            <div id="footer">
+                Este seria el footer bien diseñado
+            </div>
         </div>
+        
     </body>
 </html>
