corrección de ortografía

--- a/Archivo.html
+++ b/Archivo.html
@@ -11,20 +11,20 @@
         <div id = "container">
             <div id = "cabecera1">
                 <img id="logo" src="imagenes/Logo.png" />
-                Super blog 
+                Superblog 
                 <span id = "tagline"> El blog para aprender git</span>
             </div>
             <div id = "post">
-                <h1>Aqui vamos a hacer un blog para git</h1>
-                <p>Este es un parrafo para el curso de git</p>
+                <h1>Aquí vamos a hacer un blog para git</h1>
+                <p>Este es un párrafo para el curso de git</p>
                 <p>
-                    Este blog esta diseñado para aprender git
-                    haciendo unos ejercicios por ejemplo este parrfo
-                    esta diseñado para hacer un merge junto con la cabezera
+                    Este blog está diseñado para aprender git
+                    haciendo unos ejercicios por ejemplo este parrafo
+                    está diseñado para hacer un merge junto con la cabezera
                 </p>
             </div>
             <div id="footer">
-                Este seria el footer bien diseñado
+                Este sería el footer bien diseñado
             </div>
         </div>
         
