agregue imagen al blog

--- a/Archivo.html
+++ b/Archivo.html
@@ -17,6 +17,7 @@
             <div id = "post">
                 <h1>Aquí vamos a hacer un blog para git</h1>
                 <p>Este es un párrafo para el curso de git</p>
+                <p> <img src="imagenes/imagen.jpg" width="100%"/></p>
                 <p>
                     Este blog está diseñado para aprender git
                     haciendo unos ejercicios por ejemplo este parrafo
